@@ -11,6 +11,7 @@ entire history of the project is available through CVS.
 --- 2006-08-XX  Release 7.8.3                                      ---
 ----------------------------------------------------------------------
 
+* ctrl-d on empty shell line now quits mged - Sean Morrison
 * added archer geometry/view loading via command-line arg - Bob Parker
 * mged tree command now supports -o/-i, matches docs - John Anderson
 * improved beginning-of-line input processing in stl-g - John Anderson
